Fix some bugs...